# check-vcpkg

./: .gitignore  CMakeLists.txt  README.md  check-vcpkg-config.cmake.in
src/: check-atomic.cpp
